INTEGRATION: CWS qadev20 (1.2.90); FILE MERGED 2004/11/22 12:30:48 sg 1.2.90.1: #i37187#CHG: replaced functions that were not jdk131 compatible